# oqtopus-sse-pulse

./: .gitignore  README.md  check_rabi.ipynb  chevron_pattern.ipynb  pyproject.toml  tutorial.ipynb
examples/: check_rabi.ipynb  chevron_pattern.ipynb  pulse_sequence.ipynb  tutorial.ipynb  tutorial_codespaces.ipynb  use_libs.ipynb  use_own_parameter.ipynb
examples/1Q-calibration/: 1Q-calib-10_T2echo.py  1Q-calib-11_single_shot_0.py  1Q-calib-11_single_shot_1.py  1Q-calib-12_single_shot_distribution_0.py  1Q-calib-12_single_shot_distribution_1.py  1Q-calib-1_chevron_pattern.py  1Q-calib-2_measure.py  1Q-calib-3_rabi.py  1Q-calib-4_hpi_calib.py  1Q-calib-5_hpi_repeat.py  1Q-calib-6_hpi_rotation.py  1Q-calib-7_virtual-Z.py  1Q-calib-8_T1.py  1Q-calib-9_ramsey.py  1Q-calib.ipynb  use_libs_test.py
examples/1Q-calibration_with_calib_note/: 1Q-calib-10_T2echo.py  1Q-calib-11_single_shot_0.py  1Q-calib-11_single_shot_1.py  1Q-calib-12_single_shot_distribution_0.py  1Q-calib-12_single_shot_distribution_1.py  1Q-calib-13_RB.py  1Q-calib-14_IRB.py  1Q-calib-14_readout_amplitude.py  1Q-calib-15_resonator_frequency.py  1Q-calib-1_chevron_pattern.py  1Q-calib-2_measure.py  1Q-calib-3_rabi.py  1Q-calib-4_hpi_calib.py  1Q-calib-5_hpi_repeat.py  1Q-calib-6_hpi_rotation.py  1Q-calib-7_virtual-Z.py  1Q-calib-8_T1.py  1Q-calib-9_ramsey.py  1Q-calib.ipynb  functions.py  get_calib_note_test.py
examples/2Q-calibration/: 2Q-calib-1_CRcalib_0XX.py  2Q-calib-1_CRcalib_0YY.py  2Q-calib-1_CRcalib_0ZZ.py  2Q-calib-1_CRcalib_1XX.py  (+3 more)
program/: check_rabi.py
src/: adapter.py  sselog.py
(+50 files in other folders)
